# SonataOpsStudio

./: .env.example  .gitignore  Makefile  README.md  docker-compose.cloud.yml  docker-compose.yml
.github/workflows/: deploy-free-vm.yml  pages.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  metrics.py  tracing.py  websocket.py
backend/app/agents/: __init__.py  events.py  n8n_client.py
backend/app/api/: __init__.py  routes_admin.py  routes_anomalies.py  routes_audio.py  routes_briefs.py  routes_health.py  routes_kpis.py  routes_rag.py
backend/app/clickhouse/: __init__.py  client.py  ingest.py  queries.py  schema.sql
backend/app/db/: __init__.py  postgres.py  schema.sql  seed.py
backend/app/rag/: __init__.py  evals.py  indexer.py  llm_provider.py  policies.py  prompts.py  retriever.py
backend/app/sonification/: __init__.py  features.py  mapping.py  presets.py  sc_engine.py
backend/app/storage/: __init__.py  artifacts.py  minio_client.py
backend/app/utils/: redaction.py
deploy/free-tier/: Caddyfile  bootstrap.sh  update.sh
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  IMPLEMENTATION_ROADMAP.md  ONLINE_DEPLOYMENT_FREE_TIER.md  PRICING_PACKAGES.md  PRODUCT_OVERVIEW.md  RAG_EVAL_PLAYBOOK.md  ROI_CALCULATOR.md  RUNBOOK.md  SALES_PLAN.md  SECURITY_GOVERNANCE.md  SONIFICATION_MAPPING.md
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
infra/otel/: otel-collector.yml
infra/prometheus/: prometheus.yml
n8n/: README.md
scripts/: capture_screenshots.py  listen-demo.sh
site/: index.html
(+34 files in other folders)
